--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 <head>
 	<meta chatset="UTF-8">
 	<title>Breakout Game</title>
-	<link rel="stylesheet" href="styles.css" />
+	<link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
 
 	<canvas id="myCanvas" width="480" height="320"></canvas>
 
-<script src="script.js"></script>
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
