--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 
 	<canvas id="myCanvas" width="480" height="320"></canvas>
 
-<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="main.js"></script>
+	
 </body>
 </html>
