--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="eng">
 <head>
+	
 	<meta chatset="UTF-8">
+
 	<title>Breakout Game</title>
+
 	<link rel="stylesheet" type="text/css" href="styles.css" />
+
 </head>
 <body>
 
 	<canvas id="myCanvas" width="480" height="320"></canvas>
 
-	<script type="text/javascript" src="main.js"></script>
+	<script type="module" src="scripts/main.js"></script>
 	
 </body>
 </html>
