added background color, canvas border, and pause feature

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,21 @@
 
 	<title>Breakout Game</title>
 
-	<link rel="stylesheet" type="text/css" href="styles.css" />
+	<link rel="stylesheet" type="text/css" href="styles.css">
+
+	<style>
+		body {
+		  background-color: #D5D5D5;
+		}
+	</style>
 
 </head>
 <body>
 
-	<canvas id="myCanvas" width="480" height="320"></canvas>
+	<h1> Breakout! </h1>
+	<br />
+	
+	<canvas id="myCanvas" width="480" height="320" style="border:1px solid #000000;"></canvas>
 
 	<script type="module" src="scripts/main.js"></script>
 	
