--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
 	
 	<canvas id="myCanvas" width="480" height="320" style="border:1px solid #000000;"></canvas>
 
+	<img id="bomb" src="./img/bomb.png" alt="?">
+
 	<script type="module" src="scripts/main.js"></script>
 	
 </body>
