--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
 	<canvas id="myCanvas" width="480" height="320" style="border:1px solid #000000;"></canvas>
 
 	<img id="bomb" src="./img/bomb.png" alt="?">
+	<img id="clock" src="./img/clock.png" alt="?">
 
 	<script type="module" src="scripts/main.js"></script>
 	
