added arrow power up - need to change name from super ball

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,11 @@
 
 	<img id="bomb" src="./img/bomb.png" alt="?">
 	<img id="clock" src="./img/clock.png" alt="?">
+	<img id="arrow" src="./img/arrow.png" alt="?">
+	<img id="arrow_NE" src="./img/arrow_NE.png" alt="?">
+	<img id="arrow_SE" src="./img/arrow_SE.png" alt="?">
+	<img id="arrow_SW" src="./img/arrow_SW.png" alt="?">
+	<img id="arrow_NW" src="./img/arrow_NW.png" alt="?">
 
 	<script type="module" src="scripts/main.js"></script>
 	
