changed name from Cluster Bomb to Missile and added all animations

--- a/public/index.html
+++ b/public/index.html
@@ -24,16 +24,19 @@
 
 	<img id="bomb" src="./img/bomb.png" alt="?">
 	<img id="clock" src="./img/clock.png" alt="?">
+
 	<img id="arrow" src="./img/arrow.png" alt="?">
 	<img id="arrow_NE" src="./img/arrow_NE.png" alt="?">
 	<img id="arrow_SE" src="./img/arrow_SE.png" alt="?">
 	<img id="arrow_SW" src="./img/arrow_SW.png" alt="?">
-	<img id="missile_NW" src="./img/arrow_NW.png" alt="?">
+	<img id="arrow_NW" src="./img/arrow_NW.png" alt="?">
+
 	<img id="missile_NE" src="./img/missile_NE.png" alt="?">
 	<img id="missile_SE" src="./img/missile_SE.png" alt="?">
 	<img id="missile_SW" src="./img/missile_SW.png" alt="?">
-	<img id="missle_NW" src="./img/missile_NW.png" alt="?">
+	<img id="missile_NW" src="./img/missile_NW.png" alt="?">
 	<img id="missile" src="./img/missile.png" alt="?">
+
 	<img id="slime_ball" src="./img/slime_ball.png" alt="?">
 
 	<script type="module" src="scripts/main.js"></script>
