added Row Blaster icon

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,8 @@
 	<img id="missile" src="./img/missile.png" alt="?">
 
 	<img id="slime_ball" src="./img/slime_ball.png" alt="?">
+	<img id="row_blaster" src="./img/row_blaster.png" alt="?">
+
 
 	<script type="module" src="scripts/main.js"></script>
 	
