added column blaster

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
 
 	<img id="slime_ball" src="./img/slime_ball.png" alt="?">
 	<img id="row_blaster" src="./img/row_blaster.png" alt="?">
+	<img id="column_blaster" src="./img/column_blaster.png" alt="?">
 
 
 	<script type="module" src="scripts/main.js"></script>
