added lightning icons for scatter shot balls and laser icon for laser shot balls

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,15 @@
 	<img id="slime_ball" src="./img/slime_ball.png" alt="?">
 	<img id="row_blaster" src="./img/row_blaster.png" alt="?">
 	<img id="column_blaster" src="./img/column_blaster.png" alt="?">
+	
+	<img id="scatter_shot" src="./img/scatter_shot.png" alt="?">
+	<img id="lightning_NE" src="./img/lightning_NE.png" alt="?">
+	<img id="lightning_SE" src="./img/lightning_SE.png" alt="?">
+	<img id="lightning_SW" src="./img/lightning_SW.png" alt="?">
+	<img id="lightning_NW" src="./img/lightning_NW.png" alt="?">
 
+	<img id="laser_S" src="./img/laser_S.png" alt="?">
+	<img id="laser_N" src="./img/laser_N.png" alt="?">
 
 	<script type="module" src="scripts/main.js"></script>
 	
