added Ghost icon for Ghost Ball power up

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,12 @@
 	<img id="laser_S" src="./img/laser_S.png" alt="?">
 	<img id="laser_N" src="./img/laser_N.png" alt="?">
 
+	<img id="ghost" src="./img/ghost.png" alt="?">
+	<img id="ghost_NE" src="./img/ghost_NE.png" alt="?">
+	<img id="ghost_SE" src="./img/ghost_SE.png" alt="?">
+	<img id="ghost_SW" src="./img/ghost_SW.png" alt="?">
+	<img id="ghost_NW" src="./img/ghost_NW.png" alt="?">
+
 	<script type="module" src="scripts/main.js"></script>
 	
 </body>
