--- a/public/index.html
+++ b/public/index.html
@@ -22,22 +22,23 @@
 	
 	<canvas id="myCanvas" width="480" height="320" style="border:1px solid #000000;"></canvas>
 
+	<img id="game_ball" src="./img/ball.png" alt="?">
 	<img id="bomb" src="./img/bomb.png" alt="?">
+
 	<img id="clock" src="./img/clock.png" alt="?">
 
-	<img id="arrow" src="./img/arrow.png" alt="?">
 	<img id="arrow_NE" src="./img/arrow_NE.png" alt="?">
 	<img id="arrow_SE" src="./img/arrow_SE.png" alt="?">
 	<img id="arrow_SW" src="./img/arrow_SW.png" alt="?">
 	<img id="arrow_NW" src="./img/arrow_NW.png" alt="?">
+	
+	<img id="slime_ball" src="./img/slime_ball.png" alt="?">
 
 	<img id="missile_NE" src="./img/missile_NE.png" alt="?">
 	<img id="missile_SE" src="./img/missile_SE.png" alt="?">
 	<img id="missile_SW" src="./img/missile_SW.png" alt="?">
 	<img id="missile_NW" src="./img/missile_NW.png" alt="?">
-	<img id="missile" src="./img/missile.png" alt="?">
 
-	<img id="slime_ball" src="./img/slime_ball.png" alt="?">
 	<img id="row_blaster" src="./img/row_blaster.png" alt="?">
 	<img id="column_blaster" src="./img/column_blaster.png" alt="?">
 	
