added extra life power up

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
 
 	<img id="game_ball" src="./img/ball.png" alt="?">
 	<img id="bomb" src="./img/bomb.png" alt="?">
+	<img id="heart" src="./img/heart.png" alt="?">
+	<img id="coin" src="./img/coin.png" alt="?">
 
 	<img id="clock" src="./img/clock.png" alt="?">
 
@@ -31,7 +33,7 @@
 	<img id="arrow_SE" src="./img/arrow_SE.png" alt="?">
 	<img id="arrow_SW" src="./img/arrow_SW.png" alt="?">
 	<img id="arrow_NW" src="./img/arrow_NW.png" alt="?">
-	
+
 	<img id="slime_ball" src="./img/slime_ball.png" alt="?">
 
 	<img id="missile_NE" src="./img/missile_NE.png" alt="?">
