added coin icon for extra ball and added Revert Paddle powerup

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
 	<img id="bomb" src="./img/bomb.png" alt="?">
 	<img id="heart" src="./img/heart.png" alt="?">
 	<img id="coin" src="./img/coin.png" alt="?">
+	<img id="revert_paddle" src="./img/revert_paddle.png" alt="?">
 
 	<img id="clock" src="./img/clock.png" alt="?">
 
