added texture to brick images

--- a/public/index.html
+++ b/public/index.html
@@ -22,43 +22,55 @@
 	
 	<canvas id="myCanvas" width="480" height="320" style="border:1px solid #000000;"></canvas>
 
-	<img id="game_ball" src="./img/ball.png" alt="?">
-	<img id="bomb" src="./img/bomb.png" alt="?">
-	<img id="heart" src="./img/heart.png" alt="?">
-	<img id="coin" src="./img/coin.png" alt="?">
-	<img id="revert_paddle" src="./img/revert_paddle.png" alt="?">
+	<br />
+	<br />
 
-	<img id="clock" src="./img/clock.png" alt="?">
-
-	<img id="arrow_NE" src="./img/arrow_NE.png" alt="?">
-	<img id="arrow_SE" src="./img/arrow_SE.png" alt="?">
-	<img id="arrow_SW" src="./img/arrow_SW.png" alt="?">
-	<img id="arrow_NW" src="./img/arrow_NW.png" alt="?">
-
-	<img id="slime_ball" src="./img/slime_ball.png" alt="?">
-
-	<img id="missile_NE" src="./img/missile_NE.png" alt="?">
-	<img id="missile_SE" src="./img/missile_SE.png" alt="?">
-	<img id="missile_SW" src="./img/missile_SW.png" alt="?">
-	<img id="missile_NW" src="./img/missile_NW.png" alt="?">
-
-	<img id="row_blaster" src="./img/row_blaster.png" alt="?">
-	<img id="column_blaster" src="./img/column_blaster.png" alt="?">
 	
-	<img id="scatter_shot" src="./img/scatter_shot.png" alt="?">
-	<img id="lightning_NE" src="./img/lightning_NE.png" alt="?">
-	<img id="lightning_SE" src="./img/lightning_SE.png" alt="?">
-	<img id="lightning_SW" src="./img/lightning_SW.png" alt="?">
-	<img id="lightning_NW" src="./img/lightning_NW.png" alt="?">
+	<p><img id="game_ball" src="./img/ball.png" alt="?"> - Ball</p>
+	
+	<p><img id="bomb" src="./img/bomb.png" alt="?"> - Bomb</p>
+	
+	<p><img id="heart" src="./img/heart.png" alt="?"> - Extra Life</p>
+	
+	<p><img id="coin" src="./img/coin.png" alt="?"> - Coin</p>
+	
+	<p><img id="revert_paddle" src="./img/revert_paddle.png" alt="?"> - Revert Paddle Size</p>
 
-	<img id="laser_S" src="./img/laser_S.png" alt="?">
-	<img id="laser_N" src="./img/laser_N.png" alt="?">
+	<p><img id="clock" src="./img/clock.png" alt="?"> - Slow Time</p>
 
-	<img id="ghost" src="./img/ghost.png" alt="?">
-	<img id="ghost_NE" src="./img/ghost_NE.png" alt="?">
-	<img id="ghost_SE" src="./img/ghost_SE.png" alt="?">
-	<img id="ghost_SW" src="./img/ghost_SW.png" alt="?">
-	<img id="ghost_NW" src="./img/ghost_NW.png" alt="?">
+	<p><img id="arrow_NE" src="./img/arrow_NE.png" alt="?"> - Arrow</p>
+
+	<p><img id="slime_ball" src="./img/slime_ball.png" alt="?"> - Sticky Paddle</p>
+
+	<p><img id="missile_NE" src="./img/missile_NE.png" alt="?"> - Missile</p>
+
+	<p><img id="row_blaster" src="./img/row_blaster.png" alt="?"> - Row Blaster</p>
+
+	<p><img id="column_blaster" src="./img/column_blaster.png" alt="?"> - Column Blaser</p>
+	
+	<p><img id="scatter_shot" src="./img/scatter_shot.png" alt="?"> - Scatter Shot</p>
+
+	<p><img id="laser_S" src="./img/laser_S.png" alt="?"> - Laser</p>
+
+	<p><img id="ghost" src="./img/ghost.png" alt="?"> - Ghost Ball</p>
+
+	<!-- HIDDEN IMAGES -->
+
+	<img id="arrow_SE" src="./img/arrow_SE.png" class="hidden" alt="?">
+	<img id="arrow_SW" src="./img/arrow_SW.png" class="hidden" alt="?">
+	<img id="arrow_NW" src="./img/arrow_NW.png" class="hidden" alt="?">
+	<img id="missile_SE" src="./img/missile_SE.png" class="hidden" alt="?">
+	<img id="missile_SW" src="./img/missile_SW.png" class="hidden" alt="?">
+	<img id="missile_NW" src="./img/missile_NW.png" class="hidden" alt="?">
+	<img id="lightning_NE" src="./img/lightning_NE.png" class="hidden" alt="?">
+	<img id="lightning_SE" src="./img/lightning_SE.png" class="hidden" alt="?">
+	<img id="lightning_SW" src="./img/lightning_SW.png" class="hidden" alt="?">
+	<img id="lightning_NW" src="./img/lightning_NW.png" class="hidden" alt="?">
+	<img id="laser_N" src="./img/laser_N.png" class="hidden" alt="?">
+	<img id="ghost_NE" src="./img/ghost_NE.png" class="hidden" alt="?">
+	<img id="ghost_SE" src="./img/ghost_SE.png" class="hidden" alt="?">
+	<img id="ghost_SW" src="./img/ghost_SW.png" class="hidden" alt="?">
+	<img id="ghost_NW" src="./img/ghost_NW.png" class="hidden" alt="?">
 
 	<script type="module" src="scripts/main.js"></script>
 	
