--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
 
 	<link rel="stylesheet" type="text/css" href="styles.css">
 
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+
 	<style>
 		body {
 		  background-color: #D5D5D5;
@@ -24,35 +27,6 @@
 
 	<br />
 	<br />
-
-	
-	<p><img id="game_ball" src="./img/ball.png" alt="?"> - Ball</p>
-	
-	<p><img id="bomb" src="./img/bomb.png" alt="?"> - Bomb</p>
-	
-	<p><img id="heart" src="./img/heart.png" alt="?"> - Extra Life</p>
-	
-	<p><img id="coin" src="./img/coin.png" alt="?"> - Coin</p>
-	
-	<p><img id="revert_paddle" src="./img/revert_paddle.png" alt="?"> - Revert Paddle Size</p>
-
-	<p><img id="clock" src="./img/clock.png" alt="?"> - Slow Time</p>
-
-	<p><img id="arrow_NE" src="./img/arrow_NE.png" alt="?"> - Arrow</p>
-
-	<p><img id="slime_ball" src="./img/slime_ball.png" alt="?"> - Sticky Paddle</p>
-
-	<p><img id="missile_NE" src="./img/missile_NE.png" alt="?"> - Missile</p>
-
-	<p><img id="row_blaster" src="./img/row_blaster.png" alt="?"> - Row Blaster</p>
-
-	<p><img id="column_blaster" src="./img/column_blaster.png" alt="?"> - Column Blaser</p>
-	
-	<p><img id="scatter_shot" src="./img/scatter_shot.png" alt="?"> - Scatter Shot</p>
-
-	<p><img id="laser_S" src="./img/laser_S.png" alt="?"> - Laser</p>
-
-	<p><img id="ghost" src="./img/ghost.png" alt="?"> - Ghost Ball</p>
 
 	<!-- HIDDEN IMAGES -->
 
@@ -71,6 +45,74 @@
 	<img id="ghost_SE" src="./img/ghost_SE.png" class="hidden" alt="?">
 	<img id="ghost_SW" src="./img/ghost_SW.png" class="hidden" alt="?">
 	<img id="ghost_NW" src="./img/ghost_NW.png" class="hidden" alt="?">
+
+	<body class="py-4">
+		<div class="container">
+	
+	  <h1>Legend</h1>
+	  <p class="lead">Subtext</p>
+
+	  <h2 class="mt-4">Power Ups</h2>
+	
+	  <div class="row mb-3">
+		<div class="col-4 themed-grid-col">
+			<p><img id="game_ball" src="./img/ball.png" alt="?"> - Ball</p>
+		</div>
+		<div class="col-4 themed-grid-col">
+			<p><img id="coin" src="./img/coin.png" alt="?"> - Coin</p>
+		</div>
+		<div class="col-4 themed-grid-col">
+			<p><img id="bomb" src="./img/bomb.png" alt="?"> - Bomb</p>
+		</div>
+	  </div>
+	
+	  <div class="row mb-3">
+		<div class="col-4 themed-grid-col">
+			<p><img id="heart" src="./img/heart.png" alt="?"> - Extra Life</p>
+		</div>
+		<div class="col-4 themed-grid-col">
+			<p><img id="revert_paddle" src="./img/revert_paddle.png" alt="?"> - Revert Paddle Size</p>
+		</div>
+		<div class="col-4 themed-grid-col">
+			<p><img id="ghost" src="./img/ghost.png" alt="?"> - Ghost Ball</p>
+		</div>
+	  </div>
+	
+	  <div class="row mb-3">
+		<div class="col-4 themed-grid-col">
+			<p><img id="laser_S" src="./img/laser_S.png" alt="?"> - Laser</p>
+		</div>
+		<div class="col-4 themed-grid-col">
+			<p><img id="clock" src="./img/clock.png" alt="?"> - Slow Time</p>
+		</div>
+		<div class="col-4 themed-grid-col">
+			<p><img id="arrow_NE" src="./img/arrow_NE.png" alt="?"> - Arrow</p>
+		</div>
+	  </div>
+	
+	  <div class="row mb-3">
+		<div class="col-4 themed-grid-col">
+			<p><img id="slime_ball" src="./img/slime_ball.png" alt="?"> - Sticky Paddle</p>
+		</div>
+		<div class="col-4 themed-grid-col">
+			<p><img id="missile_NE" src="./img/missile_NE.png" alt="?"> - Missile</p>
+		</div>
+		<div class="col-4 themed-grid-col">
+			<p><img id="row_blaster" src="./img/row_blaster.png" alt="?"> - Row Blaster</p>
+		</div>
+	  </div>
+	
+	  <div class="row mb-3">
+		<div class="col-4 themed-grid-col">
+			<p><img id="column_blaster" src="./img/column_blaster.png" alt="?"> - Column Blaser</p>
+		</div>
+		<div class="col-4 themed-grid-col">
+			<p><img id="scatter_shot" src="./img/scatter_shot.png" alt="?"> - Scatter Shot</p>
+		</div>
+		<div class="col-4 themed-grid-col">
+			
+		</div>
+	  </div>
 
 	<script type="module" src="scripts/main.js"></script>
 	
