--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,8 @@
 	<!-- HIDDEN IMAGES -->
 
 	<img id="begin" src="./img/begin.png" class="hidden" alt="?">
+	<img id="watermark" src="./img/watermark.png" class="hidden" alt="?">
+
 	<img id="arrow_SE" src="./img/arrow_SE.png" class="hidden" alt="?">
 	<img id="arrow_SW" src="./img/arrow_SW.png" class="hidden" alt="?">
 	<img id="arrow_NW" src="./img/arrow_NW.png" class="hidden" alt="?">
