added power up text

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,16 @@
 	<img id="ghost_SW" src="./img/ghost_SW.png" class="hidden" alt="?">
 	<img id="ghost_NW" src="./img/ghost_NW.png" class="hidden" alt="?">
 
+	<img id="scatter_shot_text" src="./img/scatter_shot_text.png" class="hidden" alt="?">
+	<img id="column_blaster_text" src="./img/column_blaster_text.png" class="hidden" alt="?">
+	<img id="row_blaster_text" src="./img/row_blaster_text.png" class="hidden" alt="?">
+	<img id="missile_text" src="./img/missile_text.png" class="hidden" alt="?">
+	<img id="sticky_paddle_text" src="./img/sticky_paddle_text.png" class="hidden" alt="?">
+	<img id="arrow_text" src="./img/arrow_text.png" class="hidden" alt="?">
+	<img id="slow_time_text" src="./img/slow_time_text.png" class="hidden" alt="?">
+	<img id="laser_text" src="./img/laser_text.png" class="hidden" alt="?">
+	<img id="ghost_ball_text" src="./img/ghost_ball_text.png" class="hidden" alt="?">
+
 	<body class="py-4">
 		<div class="container">
 	
