--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
 <body>
 
 	<h1> Breakout! </h1>
+	<h1> Testing </h1>
 	<br />
 	
 	<canvas id="myCanvas" width="640" height="420" style="border:1px solid #000000;"></canvas>
