changed package.json scripts and added webpack config file

--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
 		</div>
 	  </div>
 
-	<script type="module" src="scripts/main.js"></script>
+	<script type="module" src="main.js"></script>
 	
 </body>
 </html>
