--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
 		</div>
 	  </div>
 
-	<script type="module" src="main.js"></script>
+	<script src="dist/main.js" defer></script>
 	
 </body>
 </html>
